--- a/src/components/checkbox-list/checkbox-list.scss
+++ b/src/components/checkbox-list/checkbox-list.scss
@@ -2,92 +2,103 @@
   margin: 0;
   padding: 0;
   list-style: none;
-}
 
-.checkbox-list__label {
-  cursor: pointer;
-}
-
-.checkbox-list__title {
-  margin: 0;
-  padding-left: 30px;
-  font-family: Montserrat, Quicksand, Arial, sans-serif;
-  font-size: 14px;
-  line-height: 24px;
-  font-weight: bold;
-  color: transparentize($contentColor, .25);
-}
-
-.checkbox-list__item {
-  margin: 0;
-  margin-bottom: 12px;
-
-  &:last-child {
-    margin-bottom: 0;
-  }
-}
-
-.checkbox-list__input[type='checkbox'] {
-  display: none;
-}
-
-.checkbox-list__label-span {
-  position: relative;
-  padding-left: 30px;
-  display: block;
-  font-size: 14px;
-  line-height: 18px;
-  font-weight: normal;
-  color: transparentize($contentColor, .55);
-
-  &::before {
-    position: absolute;
-    top: -2px;
-    left: 0;
-    box-sizing: border-box;
-    width: 20px;
-    height: 20px;
-    content: '';
-    background-color: transparent;
-    border: 1px solid rgba(31, 32, 65, .25);
-    border-radius: 4px;
-    transition: border .3s ease 0s;
+  &__label {
+    cursor: pointer;
   }
 
-  &::after {
-    position: absolute;
-    top: 3px;
-    left: 7px;
-    visibility: hidden;
-    width: 4px;
-    height: 6px;
-    opacity: 0;
-    content: '';
-    background-color: transparent;
-    border-right: 2px solid $accentColor;
-    border-bottom: 2px solid $accentColor;
-    transition: opacity .3s ease 0s, visibility .3s ease 0s;
-    transform: rotate(45deg);
+  &__title {
+    margin: 0;
+    padding-left: 30px;
+    font-family: Montserrat, Quicksand, Arial, sans-serif;
+    font-size: 14px;
+    line-height: 24px;
+    font-weight: bold;
+    color: transparentize($contentColor, .25);
   }
 
-  &_with-title {
+  &__item {
+    margin: 0;
+    margin-bottom: 12px;
+
+    &:last-child {
+      margin-bottom: 0;
+    }
+  }
+
+  &__input[type='checkbox'] {
+    display: none;
+
+    &:checked {
+      & + .checkbox-list__label-span::after {
+        visibility: visible;
+        opacity: 1;
+      }
+
+      & + .checkbox-list__label-span::before {
+        border-color: $accentColor;
+      }
+    }
+  }
+
+  &__label-span {
+    position: relative;
+    padding-left: 30px;
+    display: block;
+    font-size: 14px;
+    line-height: 18px;
+    font-weight: normal;
+    color: transparentize($contentColor, .55);
+
     &::before {
-      top: -21px;
+      position: absolute;
+      top: -2px;
+      left: 0;
+      box-sizing: border-box;
+      width: 20px;
+      height: 20px;
+      content: '';
+      background-color: transparent;
+      border: 1px solid rgba(31, 32, 65, .25);
+      border-radius: 4px;
+      transition: border .3s ease 0s;
     }
 
     &::after {
-      top: -16px;
+      position: absolute;
+      top: 3px;
+      left: 7px;
+      visibility: hidden;
+      width: 4px;
+      height: 6px;
+      opacity: 0;
+      content: '';
+      background-color: transparent;
+      border-right: 2px solid $accentColor;
+      border-bottom: 2px solid $accentColor;
+      transition: opacity .3s ease 0s, visibility .3s ease 0s;
+      transform: rotate(45deg);
+    }
+
+    &_with-title {
+      &::before {
+        top: -21px;
+      }
+
+      &::after {
+        top: -16px;
+      }
     }
   }
 }
 
-.checkbox-list__input[type='checkbox']:checked {
-  & + .checkbox-list__label-span::after {
-    visibility: visible;
-    opacity: 1;
-  }
+// .checkbox-list__input[type='checkbox']:checked {
+//   & + .checkbox-list__label-span::after {
+//     visibility: visible;
+//     opacity: 1;
+//   }
 
-  & + .checkbox-list__label-span::before {
-    border-color: $accentColor;
-  }
-}
+//   & + .checkbox-list__label-span::before {
+//     border-color: $accentColor;
+//   }
+// }
