--- a/src/components/register-card/register-card.scss
+++ b/src/components/register-card/register-card.scss
@@ -9,7 +9,7 @@
     min-width: 320px;
   }
 
-  .register-card__fieldset {
+  &__fieldset {
     margin-bottom: 20px;
     padding: 0;
     width: 320px;
@@ -28,7 +28,7 @@
     }
   }
 
-  .register-card__legend {
+  &__legend {
     margin: 0;
     margin-bottom: 5px;
     font-family: Montserrat, Quicksand, Arial, sans-serif;
@@ -38,33 +38,33 @@
     font-style: normal;
     text-transform: uppercase;
   }
-}
 
-.register-card__input-wrap {
-  margin-bottom: 10px;
-}
+  &__input-wrap {
+    margin-bottom: 10px;
+  }
 
-.register-card__wrap {
-  padding: 30px;
-  padding-top: 40px;
-}
+  &__wrap {
+    padding: 30px;
+    padding-top: 40px;
+  }
 
-.register-card__title {
-  margin: 0;
-  margin-bottom: 20px;
-  font-size: 23px;
-  line-height: 30px;
-  font-weight: bold;
-}
+  &__title {
+    margin: 0;
+    margin-bottom: 20px;
+    font-size: 23px;
+    line-height: 30px;
+    font-weight: bold;
+  }
 
-.register-card__account-enter {
-  margin-top: 30px;
-  display: flex;
-  align-items: center;
-  font-family: Montserrat, Quicksand, Arial, sans-serif;
-  /* stylelint-disable */
-  p {
-    /* stylelint-enable */
-    margin-right: auto;
+  &__account-enter {
+    margin-top: 30px;
+    display: flex;
+    align-items: center;
+    font-family: Montserrat, Quicksand, Arial, sans-serif;
+    /* stylelint-disable */
+    p {
+      /* stylelint-enable */
+      margin-right: auto;
+    }
   }
 }
