--- a/src/components/bulleted-list/bulleted-list.scss
+++ b/src/components/bulleted-list/bulleted-list.scss
@@ -2,25 +2,25 @@
   margin: 0;
   padding: 0;
   list-style: none;
-}
 
-.bulleted-list__item {
-  position: relative;
-  margin-bottom: 10px;
-  padding-left: 21px;
-  font-family: Montserrat, Quicksand, Arial, sans-serif;
-  font-size: 14px;
-  line-height: 24px;
-  color: transparentize($contentColor, .25);
+  &__item {
+    position: relative;
+    margin-bottom: 10px;
+    padding-left: 21px;
+    font-family: Montserrat, Quicksand, Arial, sans-serif;
+    font-size: 14px;
+    line-height: 24px;
+    color: transparentize($contentColor, .25);
 
-  &::before {
-    position: absolute;
-    top: 7px;
-    left: 0;
-    width: 10px;
-    height: 10px;
-    content: '';
-    background: transparentize($contentColor, .75);
-    border-radius: 50%;
+    &::before {
+      position: absolute;
+      top: 7px;
+      left: 0;
+      width: 10px;
+      height: 10px;
+      content: '';
+      background: transparentize($contentColor, .75);
+      border-radius: 50%;
+    }
   }
 }
