--- a/src/components/date-picker/date-picker.scss
+++ b/src/components/date-picker/date-picker.scss
@@ -54,185 +54,185 @@
     position: static;
     margin: 0;
   }
-}
 
-.date-picker__wrap {
-  padding: 20px;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-}
-
-.date-picker__control {
-  display: flex;
-  width: 100%;
-  justify-content: space-between;
-}
-
-.date-picker__title {
-  margin: 0;
-  font-size: 19px;
-  line-height: 24px;
-  font-weight: bold;
-}
-
-.date-picker__slider-btn {
-  width: 24px;
-  height: 24px;
-  font-size: 0;
-  background-color: transparent;
-  background-repeat: no-repeat;
-  background-position: center center;
-  border: none;
-  outline: none;
-  transition: transform .2s ease;
-  cursor: pointer;
-
-  &:focus {
-    border: 1px solid #1f2041;
+  &__wrap {
+    padding: 20px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
   }
 
-  &_prev {
-    background-image: url('./arrow-back.svg');
-
-    &:active {
-      transform: translateX(-5px);
-    }
+  &__control {
+    display: flex;
+    width: 100%;
+    justify-content: space-between;
   }
 
-  &_next {
-    background-image: url('./arrow-back.svg');
-    transform: rotate(180deg);
-
-    &:active {
-      transform: rotate(180deg) translateX(-5px);
-    }
-  }
-}
-
-.date-picker__calendar {
-  margin-top: 30px;
-  margin-bottom: 20px;
-  border-collapse: collapse;
-}
-
-.date-picker__th,
-.date-picker__day {
-  box-sizing: border-box;
-  width: 40px;
-  height: 40px;
-  font-size: 12px;
-  line-height: 15px;
-  font-weight: bold;
-  text-align: center;
-}
-
-.date-picker__th {
-  color: $accentColor;
-}
-
-.date-picker__day {
-  font-weight: normal;
-  color: transparentize($contentColor, .5);
-  border-radius: 22px;
-  cursor: pointer;
-
-  &:hover {
+  &__title {
+    margin: 0;
+    font-size: 19px;
+    line-height: 24px;
     font-weight: bold;
-    color: $mainColor;
-    background: linear-gradient(180deg, $accentColor, $accentGradColor);
   }
 
-  &_selected-space {
-    background: transparentize($accentColor, .75);
-    border-radius: 0;
+  &__slider-btn {
+    width: 24px;
+    height: 24px;
+    font-size: 0;
+    background-color: transparent;
+    background-repeat: no-repeat;
+    background-position: center center;
+    border: none;
+    outline: none;
+    transition: transform .2s ease;
+    cursor: pointer;
+
+    &:focus {
+      border: 1px solid #1f2041;
+    }
+
+    &_prev {
+      background-image: url('./arrow-back.svg');
+
+      &:active {
+        transform: translateX(-5px);
+      }
+    }
+
+    &_next {
+      background-image: url('./arrow-back.svg');
+      transform: rotate(180deg);
+
+      &:active {
+        transform: rotate(180deg) translateX(-5px);
+      }
+    }
   }
 
-  &_not-current {
-    color: transparentize($contentColor, .75);
+  &__calendar {
+    margin-top: 30px;
+    margin-bottom: 20px;
+    border-collapse: collapse;
+
+    .date-picker__day_current {
+      font-weight: bold;
+      color: $mainColor;
+      background: linear-gradient(180deg, $accentSecondСolor, $accentGradSecondСolor);
+    }
+
+    .date-picker__day_selected {
+      font-weight: bold;
+      color: $mainColor;
+      background: linear-gradient(180deg, $accentColor, $accentGradColor);
+    }
+
+    .date-picker__day_with-error {
+      font-weight: bold;
+      background: tomato;
+    }
   }
 
-  &_lower {
-    height: 32px;
+  &__th,
+  &__day {
+    box-sizing: border-box;
+    width: 40px;
+    height: 40px;
+    font-size: 12px;
+    line-height: 15px;
+    font-weight: bold;
+    text-align: center;
   }
 
-  @media (max-width: 320px) {
-    height: 30px;
-  }
-}
-
-.date-picker__calendar .date-picker__day_current {
-  font-weight: bold;
-  color: $mainColor;
-  background: linear-gradient(180deg, $accentSecondСolor, $accentGradSecondСolor);
-}
-
-.date-picker__calendar .date-picker__day_selected {
-  font-weight: bold;
-  color: $mainColor;
-  background: linear-gradient(180deg, $accentColor, $accentGradColor);
-}
-
-.date-picker__calendar .date-picker__day_with-error {
-  font-weight: bold;
-  background: tomato;
-}
-
-.date-picker__day_selected-start,
-.date-picker__day_selected-end {
-  position: relative;
-
-  &::after {
-    position: absolute;
-    top: 0;
-    width: 36%;
-    height: 100%;
-    content: '';
-    background: linear-gradient(
-      180deg,
-      transparentize($accentColor, .75),
-      transparentize($accentGradColor, .75)
-    );
-  }
-}
-
-.date-picker__day_selected-start {
-  &::after {
-    right: 0;
-  }
-}
-
-.date-picker__day_selected-end {
-  &::after {
-    left: 0;
-  }
-}
-
-.date-picker__button {
-  padding: 0;
-  font-size: 12px;
-  line-height: 15px;
-  font-weight: bold;
-  text-transform: uppercase;
-  color: transparentize($contentColor, .5);
-  background: transparent;
-  border: none;
-  transition: color .2s ease-in-out, transform .1s ease-in-out;
-  cursor: pointer;
-
-  &:hover {
+  &__th {
     color: $accentColor;
   }
 
-  &:active {
-    transform: translateY(3px);
-  }
-
-  &_accentuating {
-    color: $accentColor;
+  &__day {
+    font-weight: normal;
+    color: transparentize($contentColor, .5);
+    border-radius: 22px;
+    cursor: pointer;
 
     &:hover {
-      color: transparentize($contentColor, .5);
+      font-weight: bold;
+      color: $mainColor;
+      background: linear-gradient(180deg, $accentColor, $accentGradColor);
+    }
+
+    &_selected-space {
+      background: transparentize($accentColor, .75);
+      border-radius: 0;
+    }
+
+    &_not-current {
+      color: transparentize($contentColor, .75);
+    }
+
+    &_lower {
+      height: 32px;
+    }
+
+    &_selected-start,
+    &_selected-end {
+      position: relative;
+
+      &::after {
+        position: absolute;
+        top: 0;
+        width: 36%;
+        height: 100%;
+        content: '';
+        background: linear-gradient(
+          180deg,
+          transparentize($accentColor, .75),
+          transparentize($accentGradColor, .75)
+        );
+      }
+    }
+
+    &_selected-start {
+      &::after {
+        right: 0;
+      }
+    }
+
+    &_selected-end {
+      &::after {
+        left: 0;
+      }
+    }
+
+    @media (max-width: 320px) {
+      height: 30px;
+    }
+  }
+
+  &__button {
+    padding: 0;
+    font-size: 12px;
+    line-height: 15px;
+    font-weight: bold;
+    text-transform: uppercase;
+    color: transparentize($contentColor, .5);
+    background: transparent;
+    border: none;
+    transition: color .2s ease-in-out, transform .1s ease-in-out;
+    cursor: pointer;
+
+    &:hover {
+      color: $accentColor;
+    }
+
+    &:active {
+      transform: translateY(3px);
+    }
+
+    &_accentuating {
+      color: $accentColor;
+
+      &:hover {
+        color: transparentize($contentColor, .5);
+      }
     }
   }
 }
