--- a/src/components/drop-down-counter/drop-down-counter.scss
+++ b/src/components/drop-down-counter/drop-down-counter.scss
@@ -19,135 +19,135 @@
     opacity: 1;
     transform: translateY(0);
   }
-}
 
-.drop-down-counter__wrap {
-  padding-top: 7px;
-  padding-right: 7px;
-  padding-left: 14px;
-  padding-bottom: 8px;
-}
-
-.drop-down-counter__count-list {
-  margin: 0;
-  padding: 0;
-  list-style: none;
-}
-
-.drop-down-counter__count-item {
-  margin-bottom: 7px;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-
-  &:last-child {
-    margin-bottom: 0;
-  }
-}
-
-.drop-down-counter__counter-menu {
-  display: flex;
-  width: 92px;
-  justify-content: space-between;
-  align-items: center;
-}
-
-.drop-down-counter__count-item-name {
-  margin: 0;
-  padding: 0;
-  font-size: 12px;
-  line-height: 15px;
-  font-weight: bold;
-  text-transform: uppercase;
-}
-
-.drop-down-counter__select-view {
-  margin: 0;
-  width: 20px;
-  font-size: 12px;
-  line-height: 15px;
-  font-weight: bold;
-  text-align: center;
-}
-
-.drop-down-counter__counter-btn {
-  position: relative;
-  padding: 0;
-  box-sizing: border-box;
-  width: 30px;
-  height: 30px;
-  font-size: 18px;
-  text-align: center;
-  vertical-align: middle;
-  color: transparentize($contentColor, .5);
-  background: $mainColor;
-  border: 1px solid transparentize($contentColor, .5);
-  border-radius: 50%;
-  cursor: pointer;
-
-  &_plus::after {
-    position: absolute;
-    top: 2px;
-    right: 0;
-    bottom: 0;
-    left: 0;
-    content: '+';
+  &__wrap {
+    padding-top: 7px;
+    padding-right: 7px;
+    padding-left: 14px;
+    padding-bottom: 8px;
   }
 
-  &_minus::after {
-    position: absolute;
-    top: 2px;
-    right: 0;
-    bottom: 0;
-    left: 0;
-    content: '-';
+  &__count-list {
+    margin: 0;
+    padding: 0;
+    list-style: none;
   }
 
-  &_disabled {
-    color: transparentize($contentColor, .75);
-    border: 1px solid transparentize($contentColor, .75);
-    cursor: default;
-  }
-}
+  &__count-item {
+    margin-bottom: 7px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
 
-.drop-down-counter__control {
-  margin-top: 20px;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-}
-
-.drop-down-counter__button {
-  padding: 0;
-  font-size: 12px;
-  line-height: 15px;
-  font-weight: bold;
-  text-transform: uppercase;
-  color: transparentize($contentColor, .5);
-  background: transparent;
-  border: none;
-  transition: color .2s ease-in-out, transform .1s ease-in-out;
-  cursor: pointer;
-
-  &:hover {
-    color: $accentColor;
-  }
-
-  &:active {
-    transform: translateY(3px);
-  }
-
-  &_accentuating {
-    color: $accentColor;
-
-    &:hover {
-      color: transparentize($contentColor, .5);
+    &:last-child {
+      margin-bottom: 0;
     }
   }
 
-  &_hidden {
-    visibility: hidden;
-    opacity: 0;
+  &__counter-menu {
+    display: flex;
+    width: 92px;
+    justify-content: space-between;
+    align-items: center;
+  }
+
+  &__count-item-name {
+    margin: 0;
+    padding: 0;
+    font-size: 12px;
+    line-height: 15px;
+    font-weight: bold;
+    text-transform: uppercase;
+  }
+
+  &__select-view {
+    margin: 0;
+    width: 20px;
+    font-size: 12px;
+    line-height: 15px;
+    font-weight: bold;
+    text-align: center;
+  }
+
+  &__counter-btn {
+    position: relative;
+    padding: 0;
+    box-sizing: border-box;
+    width: 30px;
+    height: 30px;
+    font-size: 18px;
+    text-align: center;
+    vertical-align: middle;
+    color: transparentize($contentColor, .5);
+    background: $mainColor;
+    border: 1px solid transparentize($contentColor, .5);
+    border-radius: 50%;
+    cursor: pointer;
+
+    &_plus::after {
+      position: absolute;
+      top: 2px;
+      right: 0;
+      bottom: 0;
+      left: 0;
+      content: '+';
+    }
+
+    &_minus::after {
+      position: absolute;
+      top: 2px;
+      right: 0;
+      bottom: 0;
+      left: 0;
+      content: '-';
+    }
+
+    &_disabled {
+      color: transparentize($contentColor, .75);
+      border: 1px solid transparentize($contentColor, .75);
+      cursor: default;
+    }
+  }
+
+  &__control {
+    margin-top: 20px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
+
+  &__button {
+    padding: 0;
+    font-size: 12px;
+    line-height: 15px;
+    font-weight: bold;
+    text-transform: uppercase;
+    color: transparentize($contentColor, .5);
+    background: transparent;
+    border: none;
+    transition: color .2s ease-in-out, transform .1s ease-in-out;
+    cursor: pointer;
+
+    &:hover {
+      color: $accentColor;
+    }
+
+    &:active {
+      transform: translateY(3px);
+    }
+
+    &_accentuating {
+      color: $accentColor;
+
+      &:hover {
+        color: transparentize($contentColor, .5);
+      }
+    }
+
+    &_hidden {
+      visibility: hidden;
+      opacity: 0;
+    }
   }
 }
 
