--- a/src/components/like-btn/like-btn.scss
+++ b/src/components/like-btn/like-btn.scss
@@ -1,39 +1,41 @@
-.like-btn__button {
-  position: relative;
-  margin: 0;
-  padding: 3px 0;
-  padding-right: 12px;
-  padding-left: 20px;
-  box-sizing: border-box;
-  min-width: 40px;
-  min-height: 20px;
-  font-family: Montserrat, Quicksand, Arial, sans-serif;
-  font-size: 10px;
-  line-height: 12px;
-  font-weight: normal;
-  content: '';
-  color: transparentize($contentColor, .55);
-  background-color: transparent;
-  border: 1px solid rgba(31, 32, 65, .25);
-  border-radius: 10px;
-  cursor: pointer;
-
-  &::after {
-    position: absolute;
-    top: 5px;
-    left: 5px;
-    width: 10px;
-    height: 8px;
+.like-btn {
+  &__button {
+    position: relative;
+    margin: 0;
+    padding: 3px 0;
+    padding-right: 12px;
+    padding-left: 20px;
+    box-sizing: border-box;
+    min-width: 40px;
+    min-height: 20px;
+    font-family: Montserrat, Quicksand, Arial, sans-serif;
+    font-size: 10px;
+    line-height: 12px;
+    font-weight: normal;
     content: '';
-    background: url('../../components/like-btn/like.png') no-repeat;
-  }
-
-  &_active {
-    color: $accentColor;
-    border-color: $accentColor;
+    color: transparentize($contentColor, .55);
+    background-color: transparent;
+    border: 1px solid rgba(31, 32, 65, .25);
+    border-radius: 10px;
+    cursor: pointer;
 
     &::after {
-      background: url('../../components/like-btn/like-active.png') no-repeat;
+      position: absolute;
+      top: 5px;
+      left: 5px;
+      width: 10px;
+      height: 8px;
+      content: '';
+      background: url('../../components/like-btn/like.png') no-repeat;
+    }
+
+    &_active {
+      color: $accentColor;
+      border-color: $accentColor;
+
+      &::after {
+        background: url('../../components/like-btn/like-active.png') no-repeat;
+      }
     }
   }
 }
