--- a/src/components/toggle/toggle.scss
+++ b/src/components/toggle/toggle.scss
@@ -1,51 +1,53 @@
-.toggle__label-span {
-  position: relative;
-  padding-left: 50px;
-  display: block;
-  font-size: 14px;
-  line-height: 18px;
-  font-weight: normal;
-  color: transparentize($contentColor, .55);
-  cursor: pointer;
+.toggle {
+  &__label-span {
+    position: relative;
+    padding-left: 50px;
+    display: block;
+    font-size: 14px;
+    line-height: 18px;
+    font-weight: normal;
+    color: transparentize($contentColor, .55);
+    cursor: pointer;
 
-  &::before {
-    position: absolute;
-    top: 0;
-    left: 0;
-    box-sizing: border-box;
-    width: 40px;
-    height: 20px;
-    content: '';
-    background-color: transparent;
-    border: 1px solid rgba(31, 32, 65, .25);
-    border-radius: 10px;
-    transition: border .3s ease 0s;
+    &::before {
+      position: absolute;
+      top: 0;
+      left: 0;
+      box-sizing: border-box;
+      width: 40px;
+      height: 20px;
+      content: '';
+      background-color: transparent;
+      border: 1px solid rgba(31, 32, 65, .25);
+      border-radius: 10px;
+      transition: border .3s ease 0s;
+    }
+
+    &::after {
+      position: absolute;
+      top: 4px;
+      left: 4px;
+      width: 12px;
+      height: 12px;
+      content: '';
+      background: rgba(31, 32, 65, .25);
+      border-radius: 50%;
+      transition: transform .2s ease 0s;
+    }
   }
 
-  &::after {
-    position: absolute;
-    top: 4px;
-    left: 4px;
-    width: 12px;
-    height: 12px;
-    content: '';
-    background: rgba(31, 32, 65, .25);
-    border-radius: 50%;
-    transition: transform .2s ease 0s;
-  }
-}
+  &__input[type='checkbox'] {
+    display: none;
 
-.toggle__input[type='checkbox'] {
-  display: none;
-}
+    &:checked {
+      & + .toggle__label-span::after {
+        background: linear-gradient(180deg, $accentColor 0%, $accentGradColor 100%);
+        transform: translateX(20px);
+      }
 
-.toggle__input[type='checkbox']:checked {
-  & + .toggle__label-span::after {
-    background: linear-gradient(180deg, $accentColor 0%, $accentGradColor 100%);
-    transform: translateX(20px);
-  }
-
-  & + .toggle__label-span::before {
-    border-color: $accentColor;
+      & + .toggle__label-span::before {
+        border-color: $accentColor;
+      }
+    }
   }
 }
