--- a/src/components/ui-kit-logo/ui-kit-logo.scss
+++ b/src/components/ui-kit-logo/ui-kit-logo.scss
@@ -4,11 +4,11 @@
   margin-left: 30px;
   min-width: 120px;
   min-height: 38px;
-}
 
-.ui-kit-logo__pict {
-  width: 48px;
-  height: 48px;
-  background: url('../../components/ui-kit-logo/ui-kit-logo.png') no-repeat;
-  background-size: cover;
+  &__pict {
+    width: 48px;
+    height: 48px;
+    background: url('../../components/ui-kit-logo/ui-kit-logo.png') no-repeat;
+    background-size: cover;
+  }
 }
