--- a/src/components/pie-chart/pie-chart.pug
+++ b/src/components/pie-chart/pie-chart.pug
@@ -1,7 +1,7 @@
 mixin pieChart()
   .pie-chart
     .pie-chart__diagram
-      canvas(id="doughnut-chart" width="120" height="120")
+      canvas(class="js-doughnut-chart" width="120" height="120")
     p.pie-chart__vote #[b= 260] Голосов
     ul.pie-chart__label-list
       li(class="pie-chart__label-item  pie-chart__label-item_yellow") Великолепно
