--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -12,6 +12,7 @@ body {
   font-family: Quicksand, Montserrat, Arial, sans-serif;
   font-size: 14px;
   color: $contentColor;
+  background-color: #ffffff;
 }
 /* stylelint-enable */
 
