--- a/src/pages/room-details/room-details.scss
+++ b/src/pages/room-details/room-details.scss
@@ -20,7 +20,9 @@
 
 .room-details {
   &__picture {
+    margin: auto;
     display: flex;
+    max-width: 1920px;
     flex-wrap: wrap;
     justify-content: center;
 
@@ -47,7 +49,6 @@
     &-miniature {
       display: flex;
       width: 31.94%;
-      max-width: 608px;
       flex-wrap: wrap;
 
       @media (max-width: 1024px) {
